--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,3 +8,192 @@
   background: #fff;
   grid-template-rows: auto 1fr auto;
 }
+
+.bg-rainbow {
+  background: -moz-linear-gradient(to right, #40e0d0, #ff8c00 40%, #ff0080);
+  background: -webkit-linear-gradient(to right, #40e0d0, #ff8c00 40%, #ff0080);
+  background: linear-gradient(to right, #40e0d0, #ff8c00 40%, #ff0080);
+}
+
+.white-article p {
+  margin-bottom: 1rem;
+}
+
+.white-article a {
+  color: #1976d2;
+  text-decoration: underline;
+}
+
+.l-breadcrumb li {
+  position: relative;
+  padding-right: 24px;
+  z-index: 1;
+  color: rgba(0, 0, 0, 0.6) !important;
+  font-size: 16px;
+  line-height: 1.8;
+  text-decoration: none;
+}
+
+.l-breadcrumb li + li:after {
+  display: block;
+  content: '';
+  position: absolute;
+  left: -14px;
+  top: 11px;
+  width: 0;
+  height: 0;
+  border-color: transparent transparent transparent gray;
+  border-style: solid;
+  border-width: 4px 0 4px 6px;
+}
+
+.l-breadcrumb a:hover {
+  text-decoration: underline;
+}
+
+.article-single {
+  word-break: break-all;
+  font-size: 18px;
+
+  a {
+    color: #1976d2;
+    text-decoration: underline;
+  }
+
+  code {
+    background-color: rgba(0, 0, 0, 0.05);
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+    font-size: 85%;
+    font-weight: 400;
+    font-family: monospace, monospace;
+  }
+
+  p {
+    padding: 0 4px;
+    margin-bottom: 16px;
+  }
+
+  h1 {
+    margin-top: 8px;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 1.4;
+    color: rgba(0, 0, 0, 0.87);
+    text-wrap: break-word;
+    word-break: break-all;
+    text-align: left;
+  }
+  h2 {
+    display: block;
+    font-size: 28px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    font-weight: bold;
+    line-height: 1.5;
+    font-feature-settings: 'palt';
+    margin-top: 32px;
+    margin-bottom: 16px;
+    position: relative;
+  }
+  h3 {
+    display: block;
+    font-size: 20px;
+    padding-left: 2px;
+    font-weight: bold;
+    line-height: 1.5;
+    font-feature-settings: 'palt';
+    margin-top: 24px;
+    margin-bottom: 16px;
+    position: relative;
+  }
+  .date {
+    font-size: 14px;
+    line-height: 1.8;
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  .tags a {
+    color: rgba(0, 0, 0, 0.6) !important;
+    font-size: 14px;
+    line-height: 1.8;
+    text-decoration: none;
+  }
+  .tags a:hover {
+    text-decoration: underline;
+  }
+
+  ul {
+    list-style-type: disc;
+    list-style-position: inside;
+    padding-left: 8px;
+  }
+
+  ul,
+  ol {
+    margin-bottom: 16px;
+  }
+  ol li {
+    padding: 4px;
+  }
+  ol li::marker {
+    font-size: 110%;
+  }
+
+  img {
+    width: 70%;
+    margin-bottom: 0px;
+  }
+  @media screen and (max-width: 959px) {
+    img {
+      width: 100%;
+    }
+  }
+
+  div.code-toolbar > .toolbar {
+    right: 0.6em !important;
+  }
+  p {
+    padding: 0 4px;
+  }
+  pre {
+    margin-bottom: 16px;
+  }
+
+  .code-toolbar code {
+    padding: 0.2em 0;
+  }
+
+  .youtube {
+    max-width: 600px;
+    aspect-ratio: 16 / 9;
+  }
+  .youtube iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+  .entry-card {
+    width: 100%;
+    max-width: 500px;
+    font-size: 18px;
+    margin-bottom: 32px;
+
+    border: 4px solid;
+    border-radius: 10px;
+    border-image: -moz-linear-gradient(to right, rgb(64, 224, 208), rgb(255, 140, 0) 40%, rgb(237, 227, 232)) 1 / 1 / 0
+      stretch;
+    border-image: -webkit-linear-gradient(to right, rgb(64, 224, 208), rgb(255, 140, 0) 40%, rgb(237, 227, 232)) 1 / 1 /
+      0 stretch;
+    border-image: linear-gradient(to right, rgb(64, 224, 208), rgb(255, 140, 0) 40%, rgb(237, 227, 232)) 1 / 1 / 0
+      stretch;
+  }
+
+  .entry-card a {
+    padding: 8px;
+    color: rgba(0, 0, 0, 0.87);
+    text-decoration: none;
+    display: inline-block;
+  }
+}
