--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,7 +26,7 @@
 
 .l-breadcrumb li {
   position: relative;
-  padding-right: 24px;
+  padding-left: 24px;
   z-index: 1;
   color: rgba(0, 0, 0, 0.6) !important;
   font-size: 16px;
@@ -34,11 +34,15 @@
   text-decoration: none;
 }
 
+.l-breadcrumb li:first-child {
+  padding-left: 0;
+}
+
 .l-breadcrumb li + li:after {
   display: block;
   content: '';
   position: absolute;
-  left: -14px;
+  left: 8px;
   top: 11px;
   width: 0;
   height: 0;
