--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-#__next {
-  min-height: 100vh;
-  display: grid;
-  background: #fff;
-  grid-template-rows: auto 1fr auto;
-}
+// #__next {
+//   min-height: 100vh;
+//   display: grid;
+//   background: #fff;
+//   grid-template-rows: auto 1fr auto;
+// }
 
 .bg-rainbow {
   background: -moz-linear-gradient(to right, #40e0d0, #ff8c00 40%, #ff0080);
@@ -200,4 +200,8 @@
     text-decoration: none;
     display: inline-block;
   }
+}
+
+.drawer-content {
+  overflow-y: initial !important;
 }
